--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 .gradle
 build/
 
-# Ignore Gradle GUI config
+# Ignore Gradle GUI me.zhangxl.config
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
@@ -16,3 +16,5 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 .idea/
+src/main/resources/captcha_file.gif
+/src/main/resources/cookie_store
